# GameActivityTutorial

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/namjungsoo/gameactivitytutorial/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Log.h  OboeSinePlayer.h  android_main.cpp  game_activity_included.cpp  game_text_input_included.cpp  native-lib.cpp  native_app_glue_included.c  native_engine.cpp  native_engine.hpp  tuning_manager.cpp  tuning_manager.hpp
app/src/main/java/com/namjungsoo/gameactivitytutorial/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/namjungsoo/gameactivitytutorial/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
